--- a/css/styles.css
+++ b/css/styles.css
@@ -307,10 +307,24 @@ nav {
 }
 
 #signup-background { 
-	background-image: url('veg-bg.jpg');
+	min-height: 100%; 
+	min-width: 100%; 
+	position: fixed;
+  	left: 0;
+  	right: 0;
+  	z-index: 1;
+	display: block; 
+  	padding: 0; 
+  	margin: 0;
+	background-image: url('../images/veg-bg.jpg');
 	background-size: contain;
-	background-size: cover; 
-} 
+	background-size: cover;  
+	-webkit-filter: blur(3px);
+  	-moz-filter: blur(3px);
+  	-o-filter: blur(3px);
+  	-ms-filter: blur(3px);
+  	filter: blur(3px);
+  } 
 
 
 
@@ -323,7 +337,11 @@ nav {
 	margin: 0 auto; 
 	margin-top: 6%; 
 	background-color: #eee; 
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); 
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);  
+	position: fixed;
+  	left: 0;
+  	right: 0;
+  	z-index: 9999;
 } 
 
 #create-account { 
