--- a/css/styles.css
+++ b/css/styles.css
@@ -96,10 +96,6 @@ nav {
 	/*color: green;*/
 } 
 
-.user-col { 
-	color: orange !important;
-}
-
 #acc-box { 
 	margin-top: 5.5px;
 	width: 250px;  
@@ -194,12 +190,32 @@ nav {
 	padding: 0; 
 	margin: 10px; 
 	margin-left: 22px;
-	vertical-align: top
+	vertical-align: top; 
+	max-height: 420px;
 } 
 
 #d1 img { 
 	height: 420px; 
-	width: 100%; 
+	width: 100%;
+	position: relative; 
+}  
+
+#d1 h2 { 
+	position: absolute; 
+   	font-size: 30px;  
+   	margin-top: -100px;
+   	margin-left: 170px;   
+   	padding: 15px;
+   	color: #000; 
+   	background-color: rgba(225, 225, 225, 0.8);
+}  
+
+.cat-text { 
+	background-color: #fff; 
+}
+
+#d1:hover { 
+
 }
   
 #right-box {  
@@ -208,7 +224,9 @@ nav {
 	display: inline-block; 
 	margin: 10px;
 	vertical-align: top
-}
+} 
+
+
 
 #d2 { 
 	height: 200px; 
@@ -268,7 +286,7 @@ nav {
 
 #d6 {  
 	height: 200px;  
-	width: 29%;  
+	width: 30%;  
 	display: inline-block;  
 	margin: 10px;
 	margin-left: 22px;	
@@ -282,7 +300,7 @@ nav {
 
 #d7 {  
 	height: 200px;  
-	width: 29%;  
+	width: 30%;  
 	display: inline-block;  
 	margin: 10px;
 }  
@@ -295,7 +313,7 @@ nav {
 
 #d8 {  
 	height: 200px;  
-	width: 29%;  
+	width: 30%;  
 	display: inline-block;  
 	margin: 10px;
 }  
@@ -304,6 +322,13 @@ nav {
 	height: 200px; 
 	width: 100%; 
 	display: inline-block;
+} 
+
+#content { 
+	width: 99%; 
+	margin: 0 auto; 
+	/*background-color: green;*/  
+	margin-top: 10px;
 }
 
 #signup-background { 
@@ -449,13 +474,6 @@ nav {
 	display: none;
 } 
 
-#content { 
-	width: 95%; 
-	margin: 0 auto; 
-	/*background-color: green;*/  
-	margin-top: 10px;
-}
-
 #recipe-image { 
 	display: inline-block; 
 	width: 40%;
@@ -511,7 +529,11 @@ label.star:before {
   font-family: FontAwesome;
 } 
 
-/*stars end*/
+/*stars end*/ 
+
+#recipe-page{ 
+
+}
 
 
 
