--- a/css/styles.css
+++ b/css/styles.css
@@ -104,7 +104,12 @@ nav {
 	display: none; 
 	position:absolute; 
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}  
+}   
+
+.smallT { 
+	font-size: 15px; 
+	font-style: italic;
+}
 
 .v-acc-box { 
 	padding-bottom: 10px;
