--- a/css/styles.css
+++ b/css/styles.css
@@ -346,14 +346,36 @@ nav {
 	display: block; 
   	padding: 0; 
   	margin: 0;
-	background-image: url('../images/veg-bg.jpg');
-	background-size: contain;
-	background-size: cover;  
-	-webkit-filter: blur(3px);
+	background-image: url('../images/gbg.jpg');
+	/*background-size: contain;*/
+	background-size: cover; 
+	background-position: middle; 
+	/*-webkit-filter: blur(3px);
   	-moz-filter: blur(3px);
   	-o-filter: blur(3px);
   	-ms-filter: blur(3px);
-  	filter: blur(3px);
+  	filter: blur(3px);*/
+  }  
+
+  #login-background { 
+	min-height: 100%; 
+	min-width: 100%; 
+	position: fixed;
+  	left: 0;
+  	right: 0;
+  	z-index: 1;
+	display: block; 
+  	padding: 0; 
+  	margin: 0;
+	background-image: url('../images/gbg.jpg');
+	
+	background-size: cover;  
+	
+/*	-webkit-filter: blur(3px);
+  	-moz-filter: blur(3px);
+  	-o-filter: blur(3px);
+  	-ms-filter: blur(3px);
+  	filter: blur(3px);*/
   } 
 
 
@@ -365,7 +387,7 @@ nav {
 	padding: 10px; 
 	border-radius: 10px; 
 	margin: 0 auto; 
-	margin-top: 6%; 
+	margin-top: 7%; 
 	background-color: #eee; 
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);  
 	position: fixed;
