--- a/css/styles.css
+++ b/css/styles.css
@@ -538,52 +538,6 @@ nav {
 	background-color: red;
 } 
 
-/*Stars import*/
-
-div.stars {
-  width: 270px;
-  display: inline-block;
-} 
-
-input.star { 
-	display: none; 
-} 
-
-label.star {
-  float: right;
-  padding: 5px;
-  font-size: 15px;
-  color: #444;
-  transition: all .2s;
-} 
-
-input.star:checked ~ label.star:before {
-  content: '\f005';
-  color: #FD4;
-  transition: all .25s;
-} 
-
-input.star-5:checked ~ label.star:before {
-  color: #FE7;
-  text-shadow: 0 0 20px #952;
-} 
-
-input.star-1:checked ~ label.star:before { 
-	color: #F62; 
-} 
-
-label.star:hover { 
-	transform: rotate(-15deg) scale(1.3);  
-	cursor: pointer;
-} 
-
-label.star:before {
-  content: '\f006';
-  font-family: FontAwesome;
-} 
-
-/*stars end*/ 
-
 #recipe-page{ 
 	width: 95%; 
 	margin: 0 auto; 
@@ -628,8 +582,107 @@ label.star:before {
 	margin: 0 auto;
 	padding-top: 20px; 
 	padding-bottom: 20px;
+}  
+
+#search-bg { 
+	background: url('../images/search-bg.jpg') no-repeat center center fixed; 
+ 	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover; 
 } 
 
+#search-results{ 
+	width: 80%; 
+	margin: 0 auto; 
+} 
+
+.result {  
+	background-color: #fff; 
+	width: 99%; 
+	margin-top: 20px; 
+	border-bottom: 5px solid #12a112; 
+	border-radius: 3px;
+}  
+
+.result:hover { 
+	cursor: pointer;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.result-content { 
+	padding: 10px;
+} 
+
+.result-img { 
+	display: inline-block; 
+	float: left; 
+	padding-right: 10px;
+} 
+
+.result-desc { 
+	display: inline-block; 
+	float: left; 
+	padding-left: 10px; 
+	margin-left: 10px;
+} 
+
+#search-results h1 { 
+	font-family: "Arial Narrow", Arial, sans-serif; 
+	color: #404040; 
+	text-align: center;
+} 
+
+#search-results a { 
+	text-decoration: none; 
+	color: #000;
+} 
+
+#recipe { 
+	width: 95%;  
+	margin: 0 auto; 
+	margin-top: 15px; 
+} 
+
+#recipe-img{ 
+	width: 28%; 
+	min-height: 40px;  
+	display: inline-block;
+	vertical-align:top;
+} 
+
+#recipe-img img { 
+	 /*border: none;
+    display: block;
+    margin: 0 auto;*/
+} 
+
+#recipe-head { 
+	width: 69%; 
+	min-height: 300px; 
+	max-height: 300px; 
+	display: inline-block;
+	vertical-align:top;
+} 
+
+#ingredients { 
+	width: 28%; 
+	min-height: 300px;  
+	display: inline-block;
+	vertical-align:top; 
+} 
+
+#ingredients h1 { 
+	text-align: center;
+}
+
+#method { 
+	width: 69%; 
+	min-height: 300px; 
+	max-height: 300px; 
+	display: inline-block;
+	vertical-align:top;	 
+} 
 
 
 
