--- a/css/styles.css
+++ b/css/styles.css
@@ -786,6 +786,41 @@ nav {
  
 .recipe-results:hover { 
 	background-color: #f2f2f2;
+} 
+
+.user-table{ 
+	width: 90%; 
+	margin: 0 auto; 
+	border: 1px solid #000; 
+	border-bottom: 0; 
+} 
+
+.user { 
+	border-bottom: 1px solid #000; 
+	padding: 5px;
+}
+
+.uFirstName { 
+	display: inline-block;  
+	width: 19%; 
+	 
+} 
+
+.uLastName { 
+	display: inline-block;  
+	width: 19%; 
+	
+} 
+
+.uEmail { 
+	display: inline-block;  
+	width: 39%; 
+	
+} 
+
+.uClass { 
+	display: inline-block;  
+	width: 19%;
 }
 
 
