--- a/css/styles.css
+++ b/css/styles.css
@@ -334,8 +334,7 @@ nav {
 
 #content { 
 	width: 99%; 
-	margin: 0 auto; 
-	/*background-color: green;*/  
+	margin: 0 auto;  
 	margin-top: 10px;
 }
 
@@ -350,14 +349,8 @@ nav {
   	padding: 0; 
   	margin: 0;
 	background-image: url('../images/gbg.jpg');
-	/*background-size: contain;*/
 	background-size: cover; 
-	background-position: middle; 
-	/*-webkit-filter: blur(3px);
-  	-moz-filter: blur(3px);
-  	-o-filter: blur(3px);
-  	-ms-filter: blur(3px);
-  	filter: blur(3px);*/
+	background-position: middle;
   }  
 
   #login-background { 
@@ -371,14 +364,7 @@ nav {
   	padding: 0; 
   	margin: 0;
 	background-image: url('../images/gbg.jpg');
-	
 	background-size: cover;  
-	
-/*	-webkit-filter: blur(3px);
-  	-moz-filter: blur(3px);
-  	-o-filter: blur(3px);
-  	-ms-filter: blur(3px);
-  	filter: blur(3px);*/
   } 
 
 
@@ -848,4 +834,60 @@ button {
 
 #recipe-settings { 
 	
+} 
+
+#comments { 
+	width: 99%; 
+	margin: 0 auto; 
+	background-color: #f2f2f2;
+} 
+
+.comment {  
+	border-bottom: 1px solid #999;
+}   
+
+.comment:first-of-type { 
+	border-top: 1px solid #999;
+}
+
+
+
+.comment-content { 
+	padding: 10px; 
+} 
+
+.comment-img { 
+	display: inline-block; 
+	float: left; 
+	padding-right: 10px; 
+	padding-bottom: 5px;
+} 
+
+.comment-desc { 
+	display: inline-block; 
+	float: left; 
+	padding-left: 10px; 
+	margin-left: 10px;
+}  
+
+#leaveAcomment{ 
+	padding: 10px;
+}
+
+#leave-comment textarea { 
+	width: 85%; 
+	height: 100px; 
+	border: 0;
+	border-radius: 3px; 
+	font-size: 15px; 
+	vertical-align:top;
+} 
+
+#leave-comment label { 
+	vertical-align:top;  
+	padding-right: 10px;
+}  
+
+#leave-comment input { 
+	right: 0;
 }
