--- a/css/styles.css
+++ b/css/styles.css
@@ -839,16 +839,17 @@ button {
 #comments { 
 	width: 99%; 
 	margin: 0 auto; 
-	background-color: #f2f2f2;
+	background-color: #f2f2f2; 
+	margin-top: 100px;
 } 
 
 .comment {  
 	border-bottom: 1px solid #999;
 }   
 
-.comment:first-of-type { 
+/*.comment:first-of-type { 
 	border-top: 1px solid #999;
-}
+}*/
 
 
 
